--- a/index.css
+++ b/index.css
@@ -3,7 +3,6 @@
 }
 
 #chatroom-form {
-	/*border: 1px solid red;*/
 	margin: 0;
 	padding: 4px 8px 8px 8px;
 	height: 100%;
@@ -11,14 +10,9 @@
 	flex-direction: column;
 }
 
-#chatroom-form textarea {
+#chat-text {
 	border: none;
 	overflow-y: scroll;
 	resize: none;
-	/*width: 100%;*/
 	flex: 1;
-}
-
-#chatroom-form input {
-	flex: 0 0 30px;
 }
