--- a/index.css
+++ b/index.css
@@ -15,4 +15,16 @@
 	overflow-y: scroll;
 	resize: none;
 	flex: 1;
+
+}
+
+.message {
+	margin: 5px 0 5px 0;
+	display:inline-block;
+	clear:both;
+    float:left;
+}
+
+.message .panel-body {
+	padding: 5px;
 }
